--- a/rest-spring-test/src/main/resources/application.yml
+++ b/rest-spring-test/src/main/resources/application.yml
@@ -1,1 +1,14 @@
-spring.application.name=rest-spring-test
+spring:
+  datasource:
+    url: jdbc:h2:mem:meu_banco
+    driver-class-name: org.h2.Driver
+    username: sa
+    password: 
+  jpa:
+    hibernate:
+      ddl-auto: create-drop # Garantindo que o schema seja criado antes da execução do script SQL
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.H2Dialect
+  defer-datasource-initialization: true # Garante a ordem correta de execução
