--- a/rest-spring-test/src/main/resources/application.yml
+++ b/rest-spring-test/src/main/resources/application.yml
@@ -1,17 +1,22 @@
+# the server is to run on port 8888 in test environment
+server:
+  port: 8888
+#spring boot application name and driver to mysql
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
-    driver-class-name: org.h2.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     username: sa
-    password: 
+    password:
+  #database especification
   jpa:
     hibernate:
-      ddl-auto: create-drop # Garantindo que o schema seja criado antes da execução do script SQL
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.H2Dialect
-  defer-datasource-initialization: true # Garante a ordem correta de execução
+        dialect: org.hibernate.dialect.MySQL8Dialect
+  defer-datasource-initialization: true
+  #this property is used to defer the datasource initialization
   mvc:
     throw-exception-if-no-handler-found: true
   web:
