feat: Swagger documentation in StartUp

--- a/rest-spring-test/src/main/resources/application.yml
+++ b/rest-spring-test/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   # define active profile
   profiles:
-    active: prod
+    active: test
   application:
     name: test-rest-spring
   #this property is used to defer the datasource initialization
