--- a/rest-spring-test/pom.xml
+++ b/rest-spring-test/pom.xml
@@ -7,7 +7,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.3.3</version>
-		<relativePath /> 
+		<relativePath />
 	</parent>
 	<groupId>com.restspringtest</groupId>
 	<artifactId>rest-spring-test</artifactId>
@@ -104,6 +104,55 @@
 						</exclude>
 					</excludes>
 				</configuration>
+			</plugin>
+			<!-- Maven Surefire Plugin para executar testes -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+				<version>2.22.0</version> <!-- Ou a versão mais recente -->
+				<executions>
+					<execution>
+						<phase>site</phase> <!-- Esse plugin deve rodar no ciclo do site -->
+						<goals>
+							<goal>report</goal> <!-- Gera o relatório em HTML -->
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<!-- Plugin Jacoco para cobertura de testes -->
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.12</version> <!-- Verifique a versão mais recente -->
+				<executions>
+					<!-- Prepara o agente do Jacoco para coletar dados de cobertura -->
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+
+					<!-- Gera o relatório de cobertura na fase de testes -->
+					<execution>
+						<id>report</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+
+					<!-- Gera o relatório HTML -->
+					<execution>
+						<id>report-aggregate</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${project.build.directory}/site/jacoco</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
